Fix button icon alignment

--- a/src/assets/admin/css/emails.css
+++ b/src/assets/admin/css/emails.css
@@ -7,6 +7,7 @@
 }
 #sv-wc-jilt-emails-install-prompt .sv-wc-jilt-prompt-install-cta .dashicons {
     vertical-align: middle;
+    line-height: 18px;
     margin-right: 5px;
 }
 
